manifests/streamystats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamystats
  namespace: streamystats
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: streamystats
  ports:
    - name: http
      port: 3000
      targetPort: 3000
